druid-derive/tests/ui/with-empty-struct.stderr
error: Lens implementations can only be derived from structs with named fields
 --> $DIR/with-empty-struct.rs:4:1
  |
4 | struct Foobar;
  | ^^^^^^
