druid-derive/tests/ui/with-empty-struct.rs
use druid::*;

#[derive(Lens)]
struct Foobar;

fn main() {}
